app/components/module/module.css
body {
    overflow-y: hidden;
    overflow-x: hidden;
}

.module-container {
    /* This height is calculated by subtracting the height
     * of the footer (48px), and the height of the subheader
     * (150px) from the total height. If you update the height
     * of the subheader, make sure to fix this CSS! */
    max-height: calc(100vh - 75px - 150px);
    padding-bottom: 100%;
    background-color: #f7f7f7;
    height: 100%;
    margin: 0;
    overflow-y: hidden;
}

.content-grid {
    width: 100%;
    height: calc(100vh - 75px - 150px);
}

.section-label {
    background: #d3d3d3;
    width: 100%;
    height: 50px;
    line-height: 50px;
    padding: 0 1.5rem 0 1rem;
    cursor: pointer;
}

.section-label h4 {
    display: inline-block;
    font-weight: 700;
}

.section-label md-icon.svg {
    color: black;
    opacity: 0.8;
    height: 20px;
    width: 20px;
    min-height: 20px;
    min-width: 20px;
    margin-right: 1rem;
}

.section-label:hover .dropdown-content ul {
    display: block;
}


/* Creates triangle at the top of the dropdown */

.dropdown-content ul:before {
    border-bottom: 10px solid #f9f9f9;
    border-left: 10px solid transparent;
    border-right: 10px solid transparent;
    content: "";
    height: 0;
    position: absolute;
    left: 0;
    top: -10px;
    width: 0;
}


/* Dropdown Content (Hidden by Default) */

.dropdown-content ul {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 1000000000000;
    -webkit-padding-start: 0;
    /* Overriding preset */
}


/* Links inside the dropdown */

.dropdown-content li {
    color: black;
    margin: 0;
    padding-left: 1rem;
    padding-right: 1rem;
    text-decoration: none;
    display: block;
}

.container md-content {
    background-color: inherit;
}

.bottom-bar {
    height: 40px;
    background-color: #8f0f1c;
    border-top: 2px solid black;
}

md-toolbar.footer {
    position: fixed;
    background-color: #d3d3d3;
    top: calc(100vh - 75px);
    font-weight: 600;
    height: 75px;
    line-height: 75px;
    padding: 0 1rem 0 1rem;
    display: flex;
    flex-direction: row;
    clear: both;
}

md-toolbar.footer .next-section {
    background-color: #b92631;
    color: white;
    border-radius: 4px;
    font-size: 0.8em;
}

md-toolbar.footer .next-section:hover {
    background-color: #8f0f1c;
}

md-toolbar.footer .prev-section {
    background-color: #b92631;
    color: white;
    border-radius: 4px;
    font-size: 0.8em;
}

md-toolbar.footer .prev-section:hover {
    background-color: #8f0f1c;
}

md-toolbar .page-number {
    margin-left: 2rem;
    margin-right: 2rem;
    position: relative;
}

.flash {
    -webkit-animation: glow 1s infinite alternate;
}

.flash:hover {
    -webkit-animation-play-state: paused;
    -moz-animation-play-state: paused;
    -o-animation-play-state: paused;
    animation-play-state: paused;
}

@-webkit-keyframes glow {
    0% {
        background-color: rgba(255, 255, 255, 0.8);
        color: black;
        border-color: white;
        -webkit-box-shadow: 0 0 10px white;
        -moz-box-shadow: 0 0 10px white;
        box-shadow: 0 0 10px white;
    }
    100% {
        border: none;
        -webkit-box-shadow: none;
        -moz-box-shadow: none;
        box-shadow: none;
    }
}


/* Force landscape on mobile */

#landscape-plase {
    display: none;
}

@media only screen and (orientation: portrait) {
    .module-container {
        display: none;
    }
    #landscape-please {
        display: block;
        width: 80%;
        margin: 5em auto;
    }
}

